lab-9/web-color-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp-color
  name: webapp-color
  namespace: web-color
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: webapp-color
  type: ClusterIP
status:
  loadBalancer: {}
