lab-9/web-color-ingress.yaml
kind: Ingress
metadata:
  name: webapp-color
  namespace: web-color
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webapp-color.lab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-color
          servicePort: 8080
apiVersion: networking.k8s.io/v1beta1
